# healthy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml  release_drafter.yaml
healthy/: __main__.py
tests/: test_healthy.py
